added color in page 1

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 }
 
 body {
-  background-color: rgb(255,255,224);
+  background-color: white;
 }
 
 /*page1*/
@@ -48,6 +48,7 @@ body {
 }
 
 #name{
+  color: #858861;
   float: left; 
   width: 250px;
   margin: 0;
@@ -57,15 +58,18 @@ body {
   float: left; 
   width: 650px;
   margin: 0;
+  color: rgb(255,255,224;
 }
 
 #contact_skill{
   float: left; 
   width: 250px;
   margin: 0;
+  color: rgb(255,255,224);
 }
 
 #experience{
+  color: #858861;
   float: left; 
   width: 650px;
   margin: 0;
