--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 /*nav bar */
-.main-navbar {
+#main-navbar {
   background-color: rgb(0,0,139);
   overflow: hidden;
 }
-.navbar-container {
+#navbar-container {
   float: left;
   width: 100%;
   position: relative;
 }
-.main-navbar ul {
+#main-navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -16,29 +16,31 @@
   left: 50%;
   float: left;
 }
-.main-navbar ul li {
+#main-navbar ul li {
   float: left;
   position: relative;
   right: 50%;
   display: block;
 }
-.main-navbar ul li a {
+#main-navbar ul li a {
   display: block;
   padding: 10px 20px;
   color: white;
   text-decoration: none;
 }
-.main-navbar ul li a:hover {
+#main-navbar ul li a:hover {
   background-color: rgb(255,255,224);
   color: black;
   text-decoration: underline;
 }
-.onpage {
+#onpage {
   background-color: rgb(255,255,224);
+  color: black;
 }
 
 body {
   background-color: white;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
 /*page1*/
@@ -77,5 +79,4 @@ body {
 
 .experience p ul li{
 	padding: 20%;
-	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
