--- a/css/style.css
+++ b/css/style.css
@@ -77,5 +77,6 @@ body {
   background-color: rgb(109,113,46);
   float: left; 
   width: 600px;
-  padding: 25px;
+  padding-left: 25px;
+  padding-top: 10px;
 }
