--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,8 @@ ul li{
 }
 
 h1{
+  font-family: Impact, sans-serif;
+  color: #CE5937
   text-align:center;
 }
 
@@ -66,12 +68,7 @@ img{
   height: auto;
 }
 
-video{
-  display: block;
-  margin: auto;
-  width: auto;
-  height: auto;
-}
+
 /*page1*/
 .pg1_wrapper{
   width: 925px;
@@ -140,7 +137,12 @@ video{
 .pg2_wrapper{
   width: 100%;
 }
-
+.pg2_wrapper video{
+  display: block;
+  margin: auto;
+  width: auto;
+  height: auto;
+}
 .content-box{
   border-style:solid;
   border-width: 0.5em;
