--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ ul li{
 
 h1{
   width: 60%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 7%;
   border: 6px solid;
   background-color: white;
@@ -159,7 +160,3 @@ video{
   margin: auto;
   margin-top: 10%;
 }
-
-
-
-
