--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,11 @@ ul li{
 }
 
 h1{
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 7%;
-  border: 6px solid;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 15%;
+  border: 8px solid;
   background-color: white;
   font-family: Impact, sans-serif;
   color: rgb(206, 89, 55);
