--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 #navbar-container {
   float: left;
   width: 100%;
-  position: relative;
+  position: sticky;
 }
 #main-navbar ul {
   list-style-type: none;
@@ -51,6 +51,10 @@ h3{
   text-align: center;
 }
 
+h4{
+	margin-top:10%;
+}
+
 ul li{
   list-style: square;
 }
@@ -59,7 +63,7 @@ ul li{
   width: 50%;
   margin-left: 25%;
   margin-right: 25%;
-  margin-top: 15%;
+  margin-top: 10%;
   border: 8px solid;
   background-color: white;
   font-family: Impact, sans-serif;
@@ -68,15 +72,20 @@ ul li{
 }
 
 img{
+  position: relative;
   display: block;
   margin: auto;
-  width: auto;
+  max-width: 100%;
   height: auto;
 }
 
 video{
+  max-width: 100%;
+  height: auto;
+  position: relative;
   display: block;
   margin: auto;
+  margin-bottom: 10%;
 }
 
 /*page1*/
@@ -88,7 +97,7 @@ video{
   border-style: double;
   border-width: 12px 0px 0px 12px;
   color: white;
-  height: 226.4px;
+  height: 227.2px;
   padding-top: 5em;
   text-align: center;
   background-color: rgb(109,113,46);
@@ -119,7 +128,7 @@ video{
   border-width: 0px 0px 12px 12px;
   border-color:  rgb(109,113,46);
   padding-top: 10px;
-  height: 592px;
+  height: 718px;
   float: left; 
   width: 235px;
   margin-left: 4px;
@@ -155,8 +164,62 @@ video{
   border-radius: 25px;
   border-color: rgb(235, 140, 16);
   background: white;
-  padding: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
   width: 50%;
   margin: auto;
   margin-top: 10%;
+}
+
+.top_left{
+  float: left;
+  transform: translateY(-80%);
+  transform: translateX(-95%);
+  max-width: 100%;
+  position: relative;
+  width: 100px;
+  height: auto;
+  margin: 0;
+}
+
+.top_right{
+  float: right;
+  transform: translateY(+80%);
+  transform: translateX(+95%);
+  max-width: 100%;
+  position: relative;
+  width: 100px;
+  height: auto;
+  margin: 0;
+}
+
+.bottom_left{
+  float: left;
+  transform: translateY(+85%);
+  transform: translateX(-95%);
+  max-width: 100%;
+  position: relative;
+  width: 100px;
+  height: auto;
+  margin: 0;
+}
+
+.bottom_right{
+  float: right;
+  transform: translateY(+185%);
+  transform: translateX(+95%);
+  max-width: 100%;
+  position: relative;
+  width: 100px;
+  height: auto;
+  margin: 0;
+}
+
+/*page3*/
+.page3{
+  background-image: url(../media/pg3_background.jpg);
+}
+
+.pg3_wrapper{
+  width: 100%;
 }
